# smart_data_analysis

./: .env.example  .gitignore  CLAUDE.md  README.md  geaph.mmd  graph.mmd  pyproject.toml
db/: dw.hql  meta.sql
docker/: docker-compose.yaml
docker/elasticsearch/: Dockerfile
docker/kibana/: kibana.yml
meta/: meta.yml
prompts/: analyze_result.md  correct_hql.md  correct_hql_system.md  correct_hql_user.md  extend_keywords_for_column_recall.md  extend_keywords_for_metric_recall.md  extend_keywords_for_value_recall.md  filter_metric_info.md  filter_table_info.md  generate_hql.md  generate_hql_system.md  generate_hql_user.md  intent_check.md  judge_error.md  missing_complete.md  validate_hql.md  validate_hql_system.md  validate_hql_user.md
prompts/deprecated/: correct_hql (deprecated).md  generate_hql (deprecated).md  validate_hql (deprecated).md
src/: application.yml  application.yml.example
src/agent/: graph.py  state.py
src/agent/node/: _common.py  analyze_result_node.py  clarify_node.py  column_retrieval_node.py  correct_hql_node.py  correct_sql_node.py  entity_extract_node.py  execute_hql_node.py  execute_sql_node.py  expand_node.py  fallback_node.py  generate_hql_node.py  generate_sql_node.py  (+10 more)
src/api/: dependiences.py  main.py
src/cli/: knowledge_cli.py  regression_cli.py
src/conf/: __init__.py  app_config.py  meta_config.py
src/enums/: types.py
src/models/: meta_models.py
src/service/: chat_service.py  knowledge_service.py
src/utils/: args_utils.py  config_loader_utils.py  llm_retry_utils.py  loader_utils.py  text_utils.py  time_utils.py
(+21 files in other folders)
