[project]
name = "smart-data-analysis"
version = "0.1.0"
description = "数据统计智能助手"
requires-python = ">=3.12"
dependencies = [
    "asyncmy>=0.2.11",
    "cryptography>=46.0.6",
    "elasticsearch[async]>=8,<9",
    "fastapi[standard]>=0.135.2",
    "huggingface-hub>=1.8.0",
    "jieba>=0.42.1",
    "langchain>=1.2.13",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.1.3",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.48",
    "pyhive>=0.7.0",
    "thrift>=0.21.0",
    "aiomysql>=0.3.2",
    "thrift-sasl>=0.4.3",
    "json-repair>=0.30.0",
    "python-dotenv>=1.0.1",
]
